# MagneticSpheres

./: .gitignore  CMakeLists.txt  Cluster.cpp  Cluster.h  Dipole.cpp  Dipole.h  Metropolis.cpp  Metropolis.h  TODO.txt  acmetropolis.cpp  acmetropolis.h  cluster.cpp  cluster.h  conjgrad.cpp  conjgrad.h  debugs.cpp  definitions.h  dipole.cpp  dipole.h  gsledits.cpp  gsledits.h  main.cpp  metropolis.cpp  metropolis.h  misc.cpp  misc.h
results/: Plotly.ipynb  Visualization.ipynb
results/.ipynb_checkpoints/: Visualization-checkpoint.ipynb
